[workspace]
resolver = "2"
members = [
    "rust/crates/sift_error",
    "rust/crates/sift_rs",
    "rust/crates/sift_stream",
    "rust/crates/sift_error",
    "rust/crates/sift_connect",
    "rust/crates/sift_stream_bindings",
    "rust/crates/sift_cli",
    "rust/crates/sift_pbfs",
    "rust/crates/sift_mcp",
    "rust/crates/sift_test_util",
]

[workspace.package]
authors = ["Sift Software Engineers <engineering@siftstack.com>"]
version = "0.10.0"
edition = "2024"
categories = ["aerospace", "science::robotics"]
homepage = "https://github.com/sift-stack/sift"
repository = "https://github.com/sift-stack/sift"
keywords = ["sift", "siftstack", "sift-stack", "sift_rs", "telemetry"]
readme = "README.md"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
arrow = "58.3.0"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
async-channel = "2.2"
async-trait = "^0.1"
axum = "0.8"
mockall = "0.14.0"
bytes = "1.11.1"
bytesize = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6", features = ["cargo", "derive", "wrap_help"] }
clap_complete = "4.6"
crc32fast = "1.4"
criterion = { version = "0.8", features = ["html_reports"] }
crossterm = "0.29"
csv = "1.4"
dirs = "6.0"
dotenvy = "0.15"
flate2 = "1.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-core = "0.3"
hyper = { version = "1.8", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["service", "server", "tokio"] }
include_dir = "0.7"
indicatif = "0.18"
indoc = "2.0"
parquet = "58.3.0"
prost = "^0.14"
prost-types = "^0.14"
pbjson = "^0.9"
pbjson-types = "^0.9"
polars = { version = "0.53.0", features = ["sql", "lazy", "parquet"] }
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.10"
rand = "0.10"
reqwest = "0.13"
rmcp = "1.7.0"
serde = "^1.0"
serde_json = "^1.0"
tdms = "0.3.0"
hdf5 = { package = "hdf5-metno", version = "0.12", features = ["static"] }
tempdir = "0.3"
tokio = "1"
tokio-stream = "0.1"
toml = "0.9"
tonic = { version = "^0.14", features = ["gzip"] }
tonic-prost = "^0.14"
tower = "^0.5"
tower-serve-static = "0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
uuid = { version = "1.22", features = ["v4"] }
zip = "8.2"

sift_connect = { version = "0.10.0", path = "rust/crates/sift_connect" }
sift_rs = { version = "0.10.0", path = "rust/crates/sift_rs" }
sift_error = { version = "0.10.0", path = "rust/crates/sift_error" }
sift_stream = { version = "0.10.0", path = "rust/crates/sift_stream" }
sift_pbfs = { version = "0.10.0", path = "rust/crates/sift_pbfs" }
sift_mcp = { version = "0.10.0", path = "rust/crates/sift_mcp" }
sift_test_util = { version = "0.10.0", path = "rust/crates/sift_test_util" }

sift_stream_bindings = { version = "0.3.0", path = "rust/crates/sift_stream_bindings" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
