[project]
name = "sift_stack_py"
version = "0.6.0"
description = "Python client library for the Sift API"
requires-python = ">=3.8"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
maintainers = [
  { name = "Sift Software Engineers", email = "engineering@siftstack.com" },
]
keywords = ["sift", "sift-stack", "siftstack", "sift_py"]
dependencies = [
  "grpcio~=1.13",
  "PyYAML~=6.0",
  "pandas~=2.0",
  "protobuf>=4.0",
  "pydantic~=2.0",
  "pydantic_core~=2.3",
  "requests~=2.25",
  "requests-toolbelt~=1.0",
  "alive-progress~=3.0",

  # May move these to optional dependencies in the future.
  "pandas-stubs~=2.0",
  "types-PyYAML~=6.0",
  "types-protobuf>=4.0",
  "typing-extensions~=4.6",
  "types-requests~=2.25",
]

[project.urls]
Homepage = "https://github.com/sift-stack/sift/tree/main/python"
Documentation = "https://docs.siftstack.com/sift_py/sift_py.html"
Repository = "https://github.com/sift-stack/sift/tree/main/python"
Changelog = "https://github.com/sift-stack/sift/tree/main/python/CHANGELOG.md"

[project.optional-dependencies]
development = [
  "grpcio-testing~=1.13",
  "mypy==1.10.0",
  "pyright==1.1.386",
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "pytest-benchmark==4.0.0",
  "pytest-mock==3.14.0",
  "ruff",
]
build = ["pdoc==14.5.0", "build==1.2.1"]
openssl = ["pyOpenSSL<24.0.0", "types-pyOpenSSL<24.0.0", "cffi~=1.14"]
tdms = ["npTDMS~=1.9"]
rosbags = ["rosbags~=0.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.8"

[tool.pyright]
python_version = "3.8"
reportOptionalMemberAccess = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "lib/sift",
  "lib/google",
  "lib/protoc_gen_openapiv2",
]

# No official typing stubs for Python gRPC libraries yet.
# https://github.com/grpc/grpc/issues/29041
[[tool.mypy.overrides]]
module = "grpc_testing"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "grpc"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "grpc.aio"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "requests_toolbelt"
ignore_missing_imports = true
ignore_errors = true

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.package-data]
sift_grafana = ["py.typed"]
sift_py = ["py.typed"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38" # Python 3.8
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "lib/sift",
  "lib/google",
  "lib/protoc_gen_openapiv2",
]

[tool.ruff.lint]
select = ["F", "W", "I", "N", "TID"]
