[workspace]
resolver = "2"
members = [
  "crates/sift_error",
  "crates/sift_rs",
  "crates/sift_stream",
  "crates/sift_error",
  "crates/sift_connect",
]

[workspace.package]
authors = ["Sift Software Engineers <engineering@siftstack.com>"]
version = "0.2.0"
edition = "2024"
categories = ["aerospace", "science::robotics"]
homepage = "https://github.com/sift-stack/sift/tree/main/rust"
repository = "https://github.com/sift-stack/sift/tree/main/rust"
keywords = ["sift", "siftstack", "sift-stack", "sift_rs", "telemetry"]
readme = "README.md"
license = "MIT"
