[workspace]
resolver = "2"
members = [
  "crates/sift_error",
  "crates/sift_rs",
  "crates/sift_stream",
  "crates/sift_error",
  "crates/sift_connect",
]

[workspace.package]
authors = ["Sift Software Engineers <engineering@siftstack.com>"]
version = "0.2.0"
edition = "2024"
categories = ["aerospace", "science::robotics"]
homepage = "https://github.com/sift-stack/sift/tree/main/rust"
repository = "https://github.com/sift-stack/sift/tree/main/rust"
keywords = ["sift", "siftstack", "sift-stack", "sift_rs", "telemetry"]
readme = "README.md"
license = "MIT"

[workspace.dependencies]
sift_connect = { version = "0.2.0", path = "crates/sift_connect" }
sift_rs = { version = "0.2.0", path = "crates/sift_rs" }
sift_error = { version = "0.2.0", path = "crates/sift_error" }
sift_stream = { version = "0.2.0", path = "crates/sift_stream" }
