[workspace]
resolver = "2"
members = [
  "crates/sift_error",
  "crates/sift_rs",
  "crates/sift_stream",
  "crates/sift_error",
  "crates/sift_connect",
  "crates/sift_stream_bindings",
]

[workspace.package]
authors = ["Sift Software Engineers <engineering@siftstack.com>"]
version = "0.4.0"
edition = "2024"
categories = ["aerospace", "science::robotics"]
homepage = "https://github.com/sift-stack/sift/tree/main/rust"
repository = "https://github.com/sift-stack/sift/tree/main/rust"
keywords = ["sift", "siftstack", "sift-stack", "sift_rs", "telemetry"]
readme = "README.md"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
pbjson-types = "^0.7"
tonic = { version = "^0.12" }

sift_connect = { path = "crates/sift_connect" }
sift_rs = { path = "crates/sift_rs" }
sift_error = {  path = "crates/sift_error" }
sift_stream = { path = "crates/sift_stream" }

sift_stream_bindings = { version = "0.1.0", path = "crates/sift_stream_bindings" }
