[package]
name = "sift_pyrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sift_pyrs"
crate-type = ["cdylib"]

[dependencies]
prost = "0.12.6"
pyo3 = "0.21.1"
sift = { path = "../../rust" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "sync", "time", "fs"] }
tonic = "0.11.0"
tower = "0.4.13"
