[package]
name = "sift_cli"
version = "0.1.0-alpha.4"
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
description = "CLI to streamline programmatic workflows with Sift's API"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
crossterm = { workspace = true }
csv = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
indicatif = { workspace = true }
parquet = { workspace = true }
pbjson-types = { workspace = true }
reqwest = { workspace = true }
sift_pbfs = { workspace = true }
sift_rs = { workspace = true }
tokio = { workspace = true, features = ["full", "net", "time"] }
tokio-stream = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
