[features]
mcp = []

[package]
name = "sift_cli"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
description = "Sift CLI"

[[bin]]
name = "sift-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
crossterm = { workspace = true }
csv = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
indicatif = { workspace = true }
parquet = { workspace = true }
pbjson-types = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sift_mcp.workspace = true
sift_pbfs = { workspace = true }
tdms = { workspace = true }
hdf5 = { workspace = true }
sift_rs = { workspace = true }
tokio = { workspace = true, features = ["full", "net", "time"] }
tokio-stream = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
axum.workspace = true
tower-serve-static.workspace = true
include_dir.workspace = true

[dev-dependencies]
indoc = { workspace = true }
bytes = { workspace = true }
