[package]
name = "sift_connect"
version = { workspace = true }
description = "A convenient and opinionated way to connect to the Sift API"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[dependencies]
dirs = "6.0.0"
sift_error = { workspace = true }
toml = "0.8.20"
tonic = { version = "^0.12", features = ["tls-native-roots", "tls", "tls-roots", "tls-webpki-roots"] }
tower = "^0.4"
