[package]
name = "sift_connect"
version = { workspace = true }
description = "A convenient and opinionated way to connect to the Sift API"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[dependencies]
dirs = { workspace = true }
sift_error = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true, features = ["tls-native-roots", "tls-webpki-roots"] }
tower = { workspace = true }
