[package]
name = "sift_mcp"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
rmcp.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sift_connect.workspace = true
sift_rs.workspace = true
sift_stream.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["cargo"] }
