[package]
name = "sift_mcp"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
rmcp = { workspace = true, features = ["transport-io"] }
serde.workspace = true
serde_json.workspace = true
sift_connect.workspace = true
sift_rs.workspace = true
sift_stream.workspace = true
tokio.workspace = true
tonic.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["cargo"] }

[dev-dependencies]
sift_test_util.workspace = true
tokio-stream.workspace = true
