[package]
name = "sift_pbfs"
version = { workspace = true }
description = "PBFS (Protobuf File Stream) format for reading and writing protobuf messages to disk"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[dependencies]
prost = { workspace = true }
sift_error = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
uuid = { workspace = true }
sift_rs = { workspace = true }
