[package]
name = "sift_rs"
version = { workspace = true }
description = "General Rust client library for the Sift API"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[dependencies]
async-trait = "^0.1"
pbjson = "^0.7"
pbjson-types = "^0.7"
prost = "^0.13"
prost-types = "^0.13"
serde = { version = "^1.0" }
sift_connect = { workspace = true }
sift_error = { workspace = true }
tonic = { version = "^0.12" }

[dev-dependencies]
chrono = "0.4.38"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.16"
