[package]
name = "sift_stream"
version = { workspace = true }
description = "A robust Sift telemetry streaming library"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[package.metadata.docs.rs]
features = ["metrics-unstable"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sift_connect = { workspace = true }
sift_error = { workspace = true }
sift_rs = { workspace = true }
tracing = { version = "0.1.41", optional = true }
bytesize = { version = "2", optional = true }
pbjson-types = { workspace = true }
tokio = { version = "1.43.0", features = ["rt", "sync", "time", "macros", "fs"] }
chrono = { workspace = true }
futures-core = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
async-channel = "2.2"
prost = "^0.13"
dirs = "6.0.0"
crc32fast = "1.4.2"
uuid = { version = "1.16.0", features = ["v4"] }
hyper = { version = "1.7.0", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1.10", features = ["service", "server", "tokio"], optional = true }
serde = { version = "1.0.226", optional = true }
serde_json = { version = "1.0.145", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:bytesize"]
metrics-unstable = ["dep:serde", "dep:serde_json", "dep:hyper", "dep:hyper-util"]
unstable = []

[dev-dependencies]
async-trait = "^0.1"
hyper-util = "0.1.10"
tempdir = "0.3.7"
tokio-stream = "0.1.17"
tonic = { workspace = true }
tower = { version = "0.5.2", features = ["util"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.16.0", features = ["v4"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "message_to_ingest_req"
harness = false
required-features = ["unstable"]